# atendeJa-Premium-Veiculos-

./: .gitignore  Dockerfile  FRONTEND-PLAN.md  README-PT.md  README.md  alembic.ini  docker-compose.yml  import_sample.csv  imóveis_teste.csv  pyproject.toml  start.sh
.github/workflows/: frontend-ci.yml
adapter-wa/: index.js  package-lock.json  package.json
app/: main.py
app/api/: deps.py  errors.py
app/core/: config.py  logging.py  security.py
app/domain/: policies.py
app/integrations/: __init__.py  pan.py
app/messaging/: limits.py  meta.py  noop.py  provider.py
app/repositories/: db.py  models.py
app/workers/: celery_app.py  tasks_inbound.py  tasks_orders.py  tasks_outbound.py
docs/: ARCHITECTURE-CHOICES.md  ARCHITECTURE.md  CONTRIBUTING.md  LEADS-INGESTION-GUIDE.md  OPERATIONS-API.md  OPERATIONS.md  PLAN-POC-VEICULOS-PAN.md  REAL_ESTATE_PLAN.md  ROADMAP.md  RUNBOOK-IMPORT-MIGRATIONS.md  SECURITY.md  STYLEGUIDE.md  TESTING.md  UX-GUIDELINES.md  import_leads_sample.csv  import_veiculos_sample.csv
frontend/nginx/: nginx.conf
frontend/ui/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
migrations/: env.py
migrations/versions/: 46ca38c65133_initial_schema_core_realestate.py  (+1 more)
tests/: conftest.py  test_admin_users.py  test_auth.py  test_health.py  test_import_csv.py  test_leads_staging.py  test_ops_config.py  test_orders_reorder.py  test_outbound_client.py  test_outbound_template.py  test_pizza_rules.py  test_sla_and_templates.py  test_webhook.py  test_webhook_hmac.py
(+70 files in other folders)
