[tool.poetry]
name = "atendeja-chatbot"
version = "0.1.0"
description = "Chatbot WhatsApp profissional com FastAPI, Celery, Redis e Postgres"
authors = ["AtendeJá <contato@atendeja.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.112.0"
uvicorn = {version = "^0.30.6", extras = ["standard"]}
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
celery = {version = "^5.4.0", extras = ["redis"]}
redis = "^5.0.7"
python-dotenv = "^1.0.1"
structlog = "^24.1.0"
httpx = "^0.27.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.8"
ruff = "^0.6.9"
mypy = "^1.11.2"
respx = "^0.21.1"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
